--- a/en/_posts/2017-12-11-top-100-for-gc.markdown
+++ b/en/_posts/2017-12-11-top-100-for-gc.markdown
@@ -13,12 +13,10 @@ There are thousands of Government of Canada (GC) tasks out there, some small, an
 
 <figure class="mrgn-tp-lg" >
     <div class="col-md-6">
-        <div class="center-block">
-            <img class="img-responsive center-block mrgn-tp-lg" src="/images/top100piechart.png" alt="Pie chart showing one segment taking up one quarter, next 4 segments covering about half, and segments getting smaller till they blend into each other by the end. Data is from the top task list for Canada.ca" />
-        </div>
+		<img class="img-responsive center-block mrgn-tp-lg" src="/images/top100piechart.png" alt="Pie chart showing one segment taking up one quarter, next 4 segments covering about half, and segments getting smaller till they blend into each other by the end. Data is from the top task list for Canada.ca" />
     </div>
     <div class="col-md-6">
-        <figcaption class="center-block mrgn-tp-lg">
+        <figcaption class="mrgn-tp-lg">
             <p><b>The top 5 tasks are responsible for more than 50% of visits to start pages for the top 100 tasks.</b></p>
             <ol>
                 <li>Get a local weather forecast</li>
