fix: task survey link

--- a/en/_posts/2023-03-22-top-tasks.md
+++ b/en/_posts/2023-03-22-top-tasks.md
@@ -87,7 +87,7 @@ title: "We’re changing the way we identify top tasks for Canada.ca"
 <p>Let us know what you think about top task management. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> or tweet using the hashtag #CanadaDotCa.</p>
 <h2>Learn more about top tasks</h2>
 <ul>
-  <li><a href="https://design.canada.ca/continuous-improvement/monitoring/GCTSS.html">GC Task Success Survey (TSS)</a></li>
+  <li><a href="https://design.canada.ca/survey/">GC Task Success Survey (TSS)</a></li>
   <li><a href="https://www.canada.ca/en/government/about/top-tasks-for-canada-ca.html">The top 50 tasks list for the Government of Canada</a></li>
   <li><a href="https://alistapart.com/article/what-really-matters-focusing-on-top-tasks">What Really Matters: Focusing on Top Tasks</a> by Gerry McGovern, describes the value of top tasks and the survey voting method to validate them</li>
   <li><a href="https://measuringu.com/top-tasks/">How to conduct a top task analysis</a> by Jeff Sauro, gets into some of the statistical details around analyzing top task data from surveys</li>
