Update tbs email for cds email

--- a/en/_posts/2023-03-22-top-tasks.md
+++ b/en/_posts/2023-03-22-top-tasks.md
@@ -84,7 +84,7 @@ title: "We’re changing the way we identify top tasks for Canada.ca"
 </ul>
 <p>Following best practices isn't enough though. Once your content is online, you need to monitor how people use it and if they're successful. Identifying the top tasks within your web content and measuring whether people can complete them helps you identify areas that may need more work. This is an effective approach to improving your ability to meet the needs of your audience.</p>
 <h2>We want to hear from you</h2>
-<p>Let us know what you think about top task management. Email us at <a href="mailto:dto.btn@tbs-sct.gc.ca">dto.btn@tbs-sct.gc.ca</a> or tweet using the hashtag #CanadaDotCa.</p>
+<p>Let us know what you think about top task management. Email us at <a href="mailto:{{ site.emails.dto }}">{{ site.emails.dto }}</a> or tweet using the hashtag #CanadaDotCa.</p>
 <h2>Learn more about top tasks</h2>
 <ul>
   <li><a href="https://design.canada.ca/survey/">GC Task Success Survey (TSS)</a></li>
