--- a/en/_posts/2017-12-11-top-100-for-gc.markdown
+++ b/en/_posts/2017-12-11-top-100-for-gc.markdown
@@ -102,7 +102,7 @@ In some cases however, supporting tasks online is much more complex, involving t
 
 ## We want to hear from you
 
-Let us know what you think about task management. Email us at [dto.btn@tbs-sct.gc.ca](mailto:dto.btn@tbs-sct.gc.ca) or tweet using the hashtag [#Canadadotca](https://twitter.com/search?q=%23Canadadotca).
+Let us know what you think about task management. Email us at [{{ site.emails.dto }}](mailto:{{ site.emails.dto }}) or tweet using the hashtag [#Canadadotca](https://twitter.com/search?q=%23Canadadotca).
 
 ## Learn more about top tasks
 
