--- a/_data/locales/index.yml
+++ b/_data/locales/index.yml
@@ -1,6 +1,6 @@
 intro:
-  en: "Evidence and insights: use the guidance from the <a href=\"https://www.canada.ca/en/government/about/design-system.html\">Canada.ca design system</a> to improve your web content."
-  fr: "Données probantes et observations&nbsp;: utiliser les lignes directrices du <a href=\"https://www.canada.ca/fr/gouvernement/a-propos/systeme-conception.html\">système de conception de Canada.ca</a> pour améliorer votre contenu Web."
+  en: "As of July 2024, we are no longer publishing new blog posts to blog.canada.ca. We now share our work through the Canadian Digital Service (CDS) blog.</p><ul><li><a href=\"https://digital.canada.ca/blog/\">Read the latest posts in the CDS blog</a></li></ul><h2>Search the collection of past articles</h2><p>These previous posts remain online as they continue to be relevant resources for improving and designing your web content. You can also use the guidance from the <a href=\"https://design.canada.ca/\">Canada.ca design system.</a>"
+  fr: "Depuis juillet 2024, nous ne publions plus de nouveaux billets de blogue sur blogue.canada.ca. Nous faisons désormais part de notre travail sur le blogue du Service numérique canadien (SNC).</p><ul><li><a href=\"https://numerique.canada.ca/blogue/\">Lisez les derniers billets de blogue du SNC</a></li></ul><h2>Recherche dans la collection d’anciens articles</h2><p>Les anciens billets de blogue restent en ligne, car ils demeurent des ressources pertinentes pour l’amélioration et la conception de votre contenu Web. Vous pouvez également suivre les conseils du <a href=\"https://conception.canada.ca/\">système de conception de Canada.ca</a>."
 feed:
   en: ATOM RSS feed
   fr: Fil RSS
