feat: dto-btn-update

--- a/en/_posts/2019-05-23-find-job.md
+++ b/en/_posts/2019-05-23-find-job.md
@@ -1,13 +1,13 @@
 ---
 altLangPage: "/2019/05/23/trouver-emploi"
 date:   2019-05-23
-description: "The Public Service Commission worked with the Digital Transformation Office (DTO) and other partners over the summer to optimize the task of finding a government job on the Canada.ca website."
+description: "The Public Service Commission worked with the Canada.ca Experience Office (CEO) and other partners over the summer to optimize the task of finding a government job on the Canada.ca website."
 
 title:  "Finding a government job…it should be so easy…"
 ---
 **By Karen Nimblett, Public Service Commission**
 
-The Public Service Commission worked with the Digital Transformation Office (DTO) and other partners over the summer to optimize the task of finding a government job on the Canada.ca website.
+The Public Service Commission worked with the Canada.ca Experience Office (CEO) and other partners over the summer to optimize the task of finding a government job on the Canada.ca website.
 
 Past user experience testing showed us that users were confused by the options that were provided under the Jobs menu. “Job Bank, Find a job….What’s the difference? Which one do I choose?”
 
