--- a/_data/locales/index.yml
+++ b/_data/locales/index.yml
@@ -1,6 +1,6 @@
 intro:
-  en: "As of December 17 2025 we have resumed publishing. We have also shared our work through the Canadian Digital Service (CDS) blog.</p><ul><li><a href=\"https://digital.canada.ca/blog/\">Read the latest posts in the CDS blog</a></li></ul>"
-  fr: "Depuis le 17 décembre 2025, nous avons repris nos publications. Nous avons également partagé notre travail sur le blogue du Service numérique canadien (SNC).</p><ul><li><a href=\"https://numerique.canada.ca/blogue/\">Lisez les derniers billets de blogue du SNC</a></li></ul>."
+  en: "As of December 17, 2025 we have resumed publishing. We have also shared our work through the <a href=\"https://digital.canada.ca/blog/\">Canadian Digital Service (CDS) blog</a>."
+  fr: "Depuis le 17 décembre 2025, nous avons repris nos publications. Nous avons également partagé notre travail sur le <a href=\"https://numerique.canada.ca/blogue/\">blogue du Service numérique canadien (SNC)</a>.
 feed:
   en: ATOM RSS feed
   fr: Fil RSS
