--- a/_data/locales/post.yml
+++ b/_data/locales/post.yml
@@ -5,8 +5,8 @@ abouttitle:
   en: About Canada.ca
   fr: A propos de Canada.ca
 connect:
-  en: Connect with the Canada.ca Experience Office at Treasury Board Secretariat
-  fr: Communiquez avec le Bureau de l’expérience Canada.ca du Secrétariat du Conseil du Trésor
+  en: Connect with the Canada.ca Experience Office at ESDC
+  fr: Communiquez avec le Bureau de l’expérience Canada.ca du EDSC
 navigation:
   en: Document navigation
   fr: Navigation dans le document
