--- a/en/_posts/2022-02-07-chatbots.md
+++ b/en/_posts/2022-02-07-chatbots.md
@@ -5,29 +5,29 @@ description: "It's important to evaluate if a chatbot is the right fit for the p
 title: "Thinking of adding a chatbot?"
 ---
 
-Chatbots (also known as conversational agents or virtual assistants) use **conversations** to help people find answers to common tasks. Instead of a person scrolling through pages of text themselves, they can ask the chatbot for help. 
+Chatbots (also known as conversational agents or virtual assistants) use **conversations** to help people find answers to common tasks. Instead of a person scrolling through pages of text themselves, they can ask the chatbot for help.
 
 “Hello, I am your COVID-19 digital assistant. Click or tap to ask a general question about COVID-19.”
 
-Well-designed conversational agents **can be** very powerful tools to help users complete their tasks. However, they require careful and thorough design, and they must be constantly maintained to reflect user needs. 
+Well-designed conversational agents **can be** very powerful tools to help users complete their tasks. However, they require careful and thorough design, and they must be constantly maintained to reflect user needs.
 
 Before deciding to develop a chatbot to improve your service delivery, it's important to evaluate if this solution is the right fit for the people you serve, and the team you have to build and support it.
 
 ## Not a “side of desk” project
 
-Chatbots may appear to provide a quick solution, but they require committed time and money to maintain. 
+Chatbots may appear to provide a quick solution, but they require committed time and money to maintain.
 
 A chatbot, or conversational agent, is a **new service offering**. It needs to be **resourced**, **designed**, and **managed** as such. This is not a ‘side of the desk’ project for your web or call center team.
 
 ## Identify and understand the issues
 
-Often times the request to build a chatbot comes along when your organization finds itself facing urgent support issues: 
+Often times the request to build a chatbot comes along when your organization finds itself facing urgent support issues:
 
 - front-line staff are identifying areas of struggle for users
 - your call centre is suddenly getting more calls, or more complaints about a specific service
 - there’s a flurry of posts related to your services on social media
 
-Lots of feedback means that there’s an issue with service delivery. People are calling and reaching out because they’re confused and/or they can’t find what they’re looking for. 
+Lots of feedback means that there’s an issue with service delivery. People are calling and reaching out because they’re confused and/or they can’t find what they’re looking for.
 
 Swamped call centres and inboxes don’t make anyone happy, but they are a **treasure trove of insights** into what people are trying to do and why they’re failing.
 
@@ -35,7 +35,7 @@ But…a chatbot shouldn’t be your first line of defense.
 
 **Start by looking at your web content** for obvious problems to solve. Are you doing everything you should be doing to improve and maintain your web content? If not, those gaps are likely triggering more calls and feedback.
 
-Make sure you’re investing time and resources into: 
+Make sure you’re investing time and resources into:
 
 - detailed analysis of web analytics data
 
@@ -49,9 +49,9 @@ Make sure you’re investing time and resources into:
 
 Review feedback submitted through online feedback tools:
 
-- [GC Task Success Survey](https://design.canada.ca/continuous-improvement/monitoring/GCTSS.html)
+- [GC Task Success Survey](https://design.canada.ca/survey/)
 
-- [On-page feedback tool](https://design.canada.ca/continuous-improvement/monitoring/feedback.html)
+- [On-page feedback tool](https://design.canada.ca/feedback/index.html)
 
 Once you get feedback, it’s important to act on it and improve web content supporting the task you’ve collected data on.
 
@@ -59,13 +59,13 @@ Once you get feedback, it’s important to act on it and improve web content sup
 
 ## A chatbot should complement your web content
 
-People expect chatbots to understand them as well as a human would. When a conversation doesn’t go as planned, or if the chatbot isn’t able to answer a question elegantly, people get frustrated. 
+People expect chatbots to understand them as well as a human would. When a conversation doesn’t go as planned, or if the chatbot isn’t able to answer a question elegantly, people get frustrated.
 
 If your web content is unclear as well, people are left even more frustrated - they couldn’t find the content and the chatbot didn’t help them…double fail!
 
 Government of Canada web content and interactions that don't meet people’s expectations can undermine the credibility of both the program or service and the government as a whole.
 
-The bottom line is that chatbots should complement web content. The two should work hand in hand to deliver improved services. 
+The bottom line is that chatbots should complement web content. The two should work hand in hand to deliver improved services.
 
 To develop an effective conversational agent that works, be prepared to:
 
@@ -73,13 +73,13 @@ To develop an effective conversational agent that works, be prepared to:
 - use sound conversational design principles
 - monitor how people interact with the agent on a **daily basis** and be prepared (and resourced) to make adjustments continually
 
-You need to decide what tasks your chatbot will tackle and set up feedback loops that allow you to maintain it effectively. You have to design the agent, every single intent, and **every** potential spelling mistake. 
+You need to decide what tasks your chatbot will tackle and set up feedback loops that allow you to maintain it effectively. You have to design the agent, every single intent, and **every** potential spelling mistake.
 
-There is no magic to help you turn existing web pages into a chatbot. 
+There is no magic to help you turn existing web pages into a chatbot.
 
 [Research summary: Delivering government services through conversation design](https://blog.canada.ca/research-summaries/conversation-design)
 
-Your maintenance model should tap into the same research, data, and cross-team collaboration that you have in place to ensure continuous improvement of your website. Moreover, this work must be managed **in addition to** **maintaining accurate and effective web content.** 
+Your maintenance model should tap into the same research, data, and cross-team collaboration that you have in place to ensure continuous improvement of your website. Moreover, this work must be managed **in addition to** **maintaining accurate and effective web content.**
 
 A chatbot should never divert resources from delivering good web content, in the name of innovation.
 
@@ -87,7 +87,7 @@ A chatbot should never divert resources from delivering good web content, in the
 
 The interactive questions design pattern provides an alternative for teams who don’t have the time, money or resources to properly support a full chatbot. This pattern still requires some research and development time, but not to the same extent as a chatbot.
 
-Interactive questions **reduce distracting details**. They help people find and focus on **customized answers**. For teams that are low on resources, interactive questions are an effective tool for simplifying content and getting people to the answers they need. 
+Interactive questions **reduce distracting details**. They help people find and focus on **customized answers**. For teams that are low on resources, interactive questions are an effective tool for simplifying content and getting people to the answers they need.
 
 [Interactive questions design pattern](https://design.canada.ca/common-design-patterns/interactive-questions.html)
 
@@ -103,7 +103,7 @@ This pattern is well suited to helping people understand:
 
 Embarking on a conversation design journey is resource intensive. Building a chatbot isn’t a way to reduce work. You need proper support and ongoing funding to make this tool effective. Your chatbot must meet all official languages and accessibility standards.
 
-There are no shortcuts when delivering effective services. Chatbots, like web content, can only truly meet user needs when user research is at the heart of your work, and when continuous improvement is an integral part of your culture. 
+There are no shortcuts when delivering effective services. Chatbots, like web content, can only truly meet user needs when user research is at the heart of your work, and when continuous improvement is an integral part of your culture.
 
 ## Learn more
 
